<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/image_course"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/cs" />

    <TextView
        android:id="@+id/text_course_name"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:gravity="start|center_vertical"
        android:text="@string/name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_course_local"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:gravity="start|center_vertical"
        android:text="@string/local"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_date_begin"
        android:layout_width="85dp"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:gravity="center|center_vertical"
        android:text="@string/begindate"
        android:textSize="12sp"

        />

</LinearLayout>